// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`useAccessToken > HTTP context > falls back to session.accessToken when no header present 1`] = `
{
  "claims": {
    "audience": [
      "https://api.test.lindorm.io",
    ],
    "issuer": "https://test.lindorm.io/",
    "subject": "alice",
  },
  "custom": {},
  "format": "jwt",
  "token": "session-jwt",
}
`;

exports[`useAccessToken > HTTP context > falls back to session.accessToken when no header present 2`] = `
{
  "claims": {
    "audience": [
      "https://api.test.lindorm.io",
    ],
    "issuer": "https://test.lindorm.io/",
    "subject": "alice",
  },
  "custom": {},
  "provenance": "verified",
  "token": "session-jwt",
}
`;

exports[`useAccessToken > HTTP context > introspects an OPAQUE bearer token and resolves introspected access 1`] = `
{
  "claims": {
    "audience": [
      "https://api.test.lindorm.io",
    ],
    "issuer": "https://test.lindorm.io/",
    "permissions": [
      "users:read",
    ],
    "scope": [
      "openid",
    ],
    "subject": "alice",
  },
  "custom": {},
  "provenance": "introspected",
  "token": "opaque-access-token",
}
`;

exports[`useAccessToken > HTTP context > verifies a JOSE bearer token and resolves verified access 1`] = `
{
  "claims": {
    "audience": [
      "https://api.test.lindorm.io",
    ],
    "issuer": "https://test.lindorm.io/",
    "subject": "alice",
  },
  "custom": {},
  "format": "jwt",
  "header": {
    "tokenType": "access_token",
  },
  "token": "eyJhbGciOiJSUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiJhbGljZSJ9.signature",
}
`;

exports[`useAccessToken > HTTP context > verifies a JOSE bearer token and resolves verified access 2`] = `
{
  "claims": {
    "audience": [
      "https://api.test.lindorm.io",
    ],
    "issuer": "https://test.lindorm.io/",
    "subject": "alice",
  },
  "custom": {},
  "provenance": "verified",
  "token": "eyJhbGciOiJSUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiJhbGljZSJ9.signature",
}
`;

exports[`useAccessToken > Socket event fast path > accepts silently when well before expiry warning window 1`] = `
{
  "claims": {
    "subject": "alice",
  },
  "custom": {},
  "provenance": "verified",
  "token": "socket-jwt",
}
`;
